# claudeclip

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
assets/: app.rc  claude-clip.manifest
docs/: ARCHITECTURE.md  ROADMAP.md
scripts/: integration-test-downscale.ps1  integration-test-files.ps1  integration-test.ps1
src/: app.rs  autostart.rs  capture.rs  config.rs  installer.rs  main.rs  updater.rs  util.rs
