[package]
name = "claude-clip"
version = "0.2.0"
edition = "2021"
description = "Watches the Windows clipboard for screenshots/images and puts a pasteable file path on the clipboard for Claude Code."
authors = ["Abhishek"]

[[bin]]
name = "claude-clip"
path = "src/main.rs"

[dependencies]
anyhow = "1"
log = "0.4"
simplelog = "0.12"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
winreg = "0.52"
png = "0.17"
ureq = { version = "2", features = ["json"] }

[dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
